@@ -1,3 +1,7 @@
+2025-07-23  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/ql/utilities/null.hpp: Updated from QuantLib 1.39
+
 2025-07-08  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll micro version and date
